@@ -22,13 +22,8 @@ import alpine.config.AlpineConfigKeys;
 import alpine.model.IConfigProperty;
 import com.github.packageurl.MalformedPackageURLException;
 import com.github.packageurl.PackageURL;
-import jakarta.json.Json;
-import jakarta.json.JsonArray;
-import jakarta.json.JsonObject;
-import jakarta.json.JsonValue;
-import org.apache.commons.collections4.MultiValuedMap;
-import org.apache.commons.collections4.multimap.HashSetValuedHashMap;
 import org.apache.commons.lang3.StringUtils;
+import org.cyclonedx.Version;
 import org.cyclonedx.model.BomReference;
 import org.cyclonedx.model.Dependency;
 import org.cyclonedx.model.Evidence;
@@ -39,6 +34,7 @@ import org.cyclonedx.model.Swid;
 import org.cyclonedx.model.Tool;
 import org.cyclonedx.model.component.evidence.Occurrence;
 import org.cyclonedx.model.license.Expression;
+import org.cyclonedx.model.license.ExpressionDetailed;
 import org.dependencytrack.model.Analysis;
 import org.dependencytrack.model.AnalysisJustification;
 import org.dependencytrack.model.AnalysisResponse;
@@ -71,19 +67,29 @@ import org.eclipse.microprofile.config.ConfigProvider;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import jakarta.json.Json;
+import jakarta.json.JsonArray;
+import jakarta.json.JsonObject;
+import jakarta.json.JsonValue;
+
 import java.io.StringReader;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.EnumMap;
+import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.SortedSet;
+import java.util.TreeSet;
 import java.util.UUID;
 import java.util.function.BiConsumer;
-import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -97,11 +103,57 @@ public class ModelConverter {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(ModelConverter.class);
 
+    private record ComponentHashFieldAccessors(
+            Function<Component, String> getter, BiConsumer<Component, String> setter) {}
+
+    private static final Map<Hash.Algorithm, ComponentHashFieldAccessors> COMPONENT_HASH_FIELD_ACCESSORS_BY_ALGORITHM =
+            new EnumMap<>(Map.ofEntries(
+                    Map.entry(
+                            Hash.Algorithm.MD5, new ComponentHashFieldAccessors(Component::getMd5, Component::setMd5)),
+                    Map.entry(
+                            Hash.Algorithm.SHA1,
+                            new ComponentHashFieldAccessors(Component::getSha1, Component::setSha1)),
+                    Map.entry(
+                            Hash.Algorithm.SHA_256,
+                            new ComponentHashFieldAccessors(Component::getSha256, Component::setSha256)),
+                    Map.entry(
+                            Hash.Algorithm.SHA_384,
+                            new ComponentHashFieldAccessors(Component::getSha384, Component::setSha384)),
+                    Map.entry(
+                            Hash.Algorithm.SHA_512,
+                            new ComponentHashFieldAccessors(Component::getSha512, Component::setSha512)),
+                    Map.entry(
+                            Hash.Algorithm.SHA3_256,
+                            new ComponentHashFieldAccessors(Component::getSha3_256, Component::setSha3_256)),
+                    Map.entry(
+                            Hash.Algorithm.SHA3_384,
+                            new ComponentHashFieldAccessors(Component::getSha3_384, Component::setSha3_384)),
+                    Map.entry(
+                            Hash.Algorithm.SHA3_512,
+                            new ComponentHashFieldAccessors(Component::getSha3_512, Component::setSha3_512)),
+                    Map.entry(
+                            Hash.Algorithm.BLAKE2b_256,
+                            new ComponentHashFieldAccessors(Component::getBlake2b_256, Component::setBlake2b_256)),
+                    Map.entry(
+                            Hash.Algorithm.BLAKE2b_384,
+                            new ComponentHashFieldAccessors(Component::getBlake2b_384, Component::setBlake2b_384)),
+                    Map.entry(
+                            Hash.Algorithm.BLAKE2b_512,
+                            new ComponentHashFieldAccessors(Component::getBlake2b_512, Component::setBlake2b_512)),
+                    Map.entry(
+                            Hash.Algorithm.BLAKE3,
+                            new ComponentHashFieldAccessors(Component::getBlake3, Component::setBlake3)),
+                    Map.entry(
+                            Hash.Algorithm.STREEBOG_256,
+                            new ComponentHashFieldAccessors(Component::getStreebog_256, Component::setStreebog_256)),
+                    Map.entry(
+                            Hash.Algorithm.STREEBOG_512,
+                            new ComponentHashFieldAccessors(Component::getStreebog_512, Component::setStreebog_512))));
+
     /**
      * Private Constructor.
      */
-    private ModelConverter() {
-    }
+    private ModelConverter() {}
 
     public static ProjectMetadata convertToProjectMetadata(final Metadata cdxMetadata) {
         if (cdxMetadata == null) {
@@ -119,17 +171,19 @@ public class ModelConverter {
         }
         if (cdxMetadata.getToolChoice() != null) {
             if (cdxMetadata.getToolChoice().getComponents() != null) {
-                cdxMetadata.getToolChoice().getComponents().stream().map(ModelConverter::convertComponent).forEach(toolComponents::add);
+                cdxMetadata.getToolChoice().getComponents().stream()
+                        .map(ModelConverter::convertComponent)
+                        .forEach(toolComponents::add);
             }
             if (cdxMetadata.getToolChoice().getServices() != null) {
-                cdxMetadata.getToolChoice().getServices().stream().map(ModelConverter::convertService).forEach(toolServices::add);
+                cdxMetadata.getToolChoice().getServices().stream()
+                        .map(ModelConverter::convertService)
+                        .forEach(toolServices::add);
             }
         }
         if (!toolComponents.isEmpty() || !toolServices.isEmpty()) {
             projectMetadata.setTools(new Tools(
-                    toolComponents.isEmpty() ? null : toolComponents,
-                    toolServices.isEmpty() ? null : toolServices
-            ));
+                    toolComponents.isEmpty() ? null : toolComponents, toolServices.isEmpty() ? null : toolServices));
         }
 
         return projectMetadata;
@@ -159,13 +213,13 @@ public class ModelConverter {
         project.setCpe(trimToNull(cdxComponent.getCpe()));
         project.setExternalReferences(convertExternalReferences(cdxComponent.getExternalReferences()));
 
-        List<OrganizationalContact> contacts = new ArrayList<>();
-        if(cdxComponent.getAuthor()!=null){
-            contacts.add(new OrganizationalContact() {{
-                setName(cdxComponent.getAuthor());
-            }});
+        final List<OrganizationalContact> contacts = new ArrayList<>();
+        if (cdxComponent.getAuthor() != null) {
+            final var author = new OrganizationalContact();
+            author.setName(cdxComponent.getAuthor());
+            contacts.add(author);
         }
-        if(cdxComponent.getAuthors()!=null){
+        if (cdxComponent.getAuthors() != null) {
             contacts.addAll(convertCdxContacts(cdxComponent.getAuthors()));
         }
         project.setAuthors(contacts);
@@ -210,13 +264,13 @@ public class ModelConverter {
         component.setExternalReferences(convertExternalReferences(cdxComponent.getExternalReferences()));
         component.setProperties(convertToComponentProperties(cdxComponent.getProperties()));
 
-        List<OrganizationalContact> contacts = new ArrayList<>();
-        if(cdxComponent.getAuthor()!=null){
-            contacts.add(new OrganizationalContact() {{
-                setName(cdxComponent.getAuthor());
-            }});
+        final List<OrganizationalContact> contacts = new ArrayList<>();
+        if (cdxComponent.getAuthor() != null) {
+            final var author = new OrganizationalContact();
+            author.setName(cdxComponent.getAuthor());
+            contacts.add(author);
         }
-        if(cdxComponent.getAuthors()!=null){
+        if (cdxComponent.getAuthors() != null) {
             contacts.addAll(convertCdxContacts(cdxComponent.getAuthors()));
         }
         component.setAuthors(contacts);
@@ -235,28 +289,7 @@ public class ModelConverter {
             component.setSwidTagId(trimToNull(cdxComponent.getSwid().getTagId()));
         }
 
-        if (cdxComponent.getHashes() != null && !cdxComponent.getHashes().isEmpty()) {
-            for (final org.cyclonedx.model.Hash cdxHash : cdxComponent.getHashes()) {
-                final Consumer<String> hashSetter = switch (cdxHash.getAlgorithm().toLowerCase()) {
-                    case "md5" -> component::setMd5;
-                    case "sha-1" -> component::setSha1;
-                    case "sha-256" -> component::setSha256;
-                    case "sha-384" -> component::setSha384;
-                    case "sha-512" -> component::setSha512;
-                    case "sha3-256" -> component::setSha3_256;
-                    case "sha3-384" -> component::setSha3_384;
-                    case "sha3-512" -> component::setSha3_512;
-                    case "blake2b-256" -> component::setBlake2b_256;
-                    case "blake2b-384" -> component::setBlake2b_384;
-                    case "blake2b-512" -> component::setBlake2b_512;
-                    case "blake3" -> component::setBlake3;
-                    default -> null;
-                };
-                if (hashSetter != null) {
-                    hashSetter.accept(cdxHash.getValue());
-                }
-            }
-        }
+        applyHashes(component, cdxComponent.getHashes());
 
         final var licenseCandidates = new ArrayList<org.cyclonedx.model.License>();
         if (cdxComponent.getLicenses() != null) {
@@ -270,12 +303,13 @@ public class ModelConverter {
                         .forEach(licenseCandidates::add);
             }
 
-            final Expression licenseExpression = cdxComponent.getLicenses().getExpression();
-            if (licenseExpression != null && isNotBlank(licenseExpression.getValue())) {
+            final String licenseExpression = convertLicenseExpression(cdxComponent.getLicenses());
+            if (isNotBlank(licenseExpression)) {
                 // If the expression consists of just one license ID, add it as another option.
-                final SpdxExpression expression = SpdxExpressionParser.getInstance().tryParse(licenseExpression.getValue());
+                final SpdxExpression expression =
+                        SpdxExpressionParser.getInstance().tryParse(licenseExpression);
                 if (expression != null) {
-                    component.setLicenseExpression(trim(licenseExpression.getValue()));
+                    component.setLicenseExpression(trim(licenseExpression));
 
                     if (expression instanceof SpdxExpression.Identifier(String id)) {
                         final var expressionLicense = new org.cyclonedx.model.License();
@@ -284,21 +318,28 @@ public class ModelConverter {
                         licenseCandidates.add(expressionLicense);
                     }
                 } else {
-                    LOGGER.warn("""
-                            Encountered invalid license expression "%s" for \
-                            Component{group=%s, name=%s, version=%s, bomRef=%s}; Skipping\
-                            """.formatted(cdxComponent.getLicenses().getExpression(), component.getGroup(),
-                            component.getName(), component.getVersion(), component.getBomRef()));
+                    LOGGER.warn(
+                            """
+                                    Encountered invalid license expression "{}" for \
+                                    Component{group={}, name={}, version={}, bomRef={}}; Skipping\
+                                    """,
+                            licenseExpression,
+                            component.getGroup(),
+                            component.getName(),
+                            component.getVersion(),
+                            component.getBomRef());
                 }
             }
         }
         component.setLicenseCandidates(licenseCandidates);
 
         if (cdxComponent.getEvidence() != null && cdxComponent.getEvidence().getOccurrences() != null) {
-            component.setOccurrences(convertOccurrences(cdxComponent.getEvidence().getOccurrences()));
+            component.setOccurrences(
+                    convertOccurrences(cdxComponent.getEvidence().getOccurrences()));
         }
 
-        if (cdxComponent.getComponents() != null && !cdxComponent.getComponents().isEmpty()) {
+        if (cdxComponent.getComponents() != null
+                && !cdxComponent.getComponents().isEmpty()) {
             final var children = new ArrayList<Component>();
 
             for (final org.cyclonedx.model.Component cdxChildComponent : cdxComponent.getComponents()) {
@@ -326,30 +367,42 @@ public class ModelConverter {
         component.setVersion(trimToNull(tool.getVersion()));
         component.setExternalReferences(convertExternalReferences(tool.getExternalReferences()));
 
-        if (tool.getHashes() != null && !tool.getHashes().isEmpty()) {
-            for (final org.cyclonedx.model.Hash cdxHash : tool.getHashes()) {
-                final Consumer<String> hashSetter = switch (cdxHash.getAlgorithm().toLowerCase()) {
-                    case "md5" -> component::setMd5;
-                    case "sha-1" -> component::setSha1;
-                    case "sha-256" -> component::setSha256;
-                    case "sha-384" -> component::setSha384;
-                    case "sha-512" -> component::setSha512;
-                    case "sha3-256" -> component::setSha3_256;
-                    case "sha3-384" -> component::setSha3_384;
-                    case "sha3-512" -> component::setSha3_512;
-                    case "blake2b-256" -> component::setBlake2b_256;
-                    case "blake2b-384" -> component::setBlake2b_384;
-                    case "blake2b-512" -> component::setBlake2b_512;
-                    case "blake3" -> component::setBlake3;
-                    default -> null;
-                };
-                if (hashSetter != null) {
-                    hashSetter.accept(cdxHash.getValue());
-                }
-            }
-        }
+        applyHashes(component, tool.getHashes());
 
         return component;
+    }
+
+    @SuppressWarnings("deprecation")
+    private static String convertLicenseExpression(LicenseChoice cdxLicenses) {
+        final Expression expression = cdxLicenses.getExpression();
+        if (expression != null) {
+            return expression.getValue();
+        }
+
+        // NB: New in CycloneDX 1.7.
+        final ExpressionDetailed expressionDetailed = cdxLicenses.getExpressionDetailed();
+        return expressionDetailed != null ? expressionDetailed.getExpression() : null;
+    }
+
+    private static void applyHashes(Component component, List<org.cyclonedx.model.Hash> cdxHashes) {
+        if (cdxHashes == null) {
+            return;
+        }
+
+        for (final org.cyclonedx.model.Hash cdxHash : cdxHashes) {
+            final Hash.Algorithm cdxHashAlgo;
+            try {
+                cdxHashAlgo = Hash.Algorithm.fromSpec(cdxHash.getAlgorithm());
+            } catch (IllegalArgumentException e) {
+                LOGGER.debug("Encountered hash with unknown algorithm {}", cdxHash.getAlgorithm());
+                continue;
+            }
+
+            final ComponentHashFieldAccessors accessors = COMPONENT_HASH_FIELD_ACCESSORS_BY_ALGORITHM.get(cdxHashAlgo);
+            if (accessors != null) {
+                accessors.setter().accept(component, cdxHash.getValue());
+            }
+        }
     }
 
     public static OrganizationalEntity convert(final org.cyclonedx.model.OrganizationalEntity cdxEntity) {
@@ -360,7 +413,9 @@ public class ModelConverter {
         final var dtEntity = new OrganizationalEntity();
         dtEntity.setName(StringUtils.trimToNull(cdxEntity.getName()));
         if (cdxEntity.getContacts() != null && !cdxEntity.getContacts().isEmpty()) {
-            dtEntity.setContacts(cdxEntity.getContacts().stream().map(ModelConverter::convert).toList());
+            dtEntity.setContacts(cdxEntity.getContacts().stream()
+                    .map(ModelConverter::convert)
+                    .toList());
         }
         if (cdxEntity.getUrls() != null && !cdxEntity.getUrls().isEmpty()) {
             dtEntity.setUrls(cdxEntity.getUrls().toArray(new String[0]));
@@ -369,7 +424,8 @@ public class ModelConverter {
         return dtEntity;
     }
 
-    public static List<OrganizationalContact> convertCdxContacts(final List<org.cyclonedx.model.OrganizationalContact> cdxContacts) {
+    public static List<OrganizationalContact> convertCdxContacts(
+            final List<org.cyclonedx.model.OrganizationalContact> cdxContacts) {
         if (cdxContacts == null) {
             return null;
         }
@@ -389,7 +445,8 @@ public class ModelConverter {
         return dtContact;
     }
 
-    private static List<org.cyclonedx.model.OrganizationalContact> convertContacts(final List<OrganizationalContact> dtContacts) {
+    private static List<org.cyclonedx.model.OrganizationalContact> convertContacts(
+            final List<OrganizationalContact> dtContacts) {
         if (dtContacts == null) {
             return null;
         }
@@ -405,7 +462,8 @@ public class ModelConverter {
         final var cdxEntity = new org.cyclonedx.model.OrganizationalEntity();
         cdxEntity.setName(StringUtils.trimToNull(dtEntity.getName()));
         if (dtEntity.getContacts() != null && !dtEntity.getContacts().isEmpty()) {
-            cdxEntity.setContacts(dtEntity.getContacts().stream().map(ModelConverter::convert).toList());
+            cdxEntity.setContacts(
+                    dtEntity.getContacts().stream().map(ModelConverter::convert).toList());
         }
         if (dtEntity.getUrls() != null && dtEntity.getUrls().length > 0) {
             cdxEntity.setUrls(Arrays.stream(dtEntity.getUrls()).toList());
@@ -426,7 +484,8 @@ public class ModelConverter {
         return cdxContact;
     }
 
-    private static List<ComponentProperty> convertToComponentProperties(final List<org.cyclonedx.model.Property> cdxProperties) {
+    private static List<ComponentProperty> convertToComponentProperties(
+            final List<org.cyclonedx.model.Property> cdxProperties) {
         if (cdxProperties == null || cdxProperties.isEmpty()) {
             return Collections.emptyList();
         }
@@ -505,32 +564,35 @@ public class ModelConverter {
         return service;
     }
 
-    public static MultiValuedMap<String, String> convertDependencyGraph(final List<Dependency> cdxDependencies) {
-        final var dependencyGraph = new HashSetValuedHashMap<String, String>();
+    public static Map<String, Set<String>> convertDependencyGraph(final List<Dependency> cdxDependencies) {
+        final var dependencyGraph = new HashMap<String, Set<String>>();
         if (cdxDependencies == null || cdxDependencies.isEmpty()) {
             return dependencyGraph;
         }
 
         for (final Dependency cdxDependency : cdxDependencies) {
-            if (cdxDependency.getDependencies() == null || cdxDependency.getDependencies().isEmpty()) {
+            if (cdxDependency.getDependencies() == null
+                    || cdxDependency.getDependencies().isEmpty()) {
                 continue;
             }
 
             final List<String> directDependencies = cdxDependency.getDependencies().stream()
-                    .map(BomReference::getRef).toList();
-            dependencyGraph.putAll(cdxDependency.getRef(), directDependencies);
+                    .map(BomReference::getRef)
+                    .toList();
+            dependencyGraph
+                    .computeIfAbsent(cdxDependency.getRef(), _ -> new HashSet<>())
+                    .addAll(directDependencies);
         }
 
         return dependencyGraph;
     }
 
     private static Optional<Classifier> convertClassifier(final org.cyclonedx.model.Component.Type cdxComponentType) {
-        return Optional.ofNullable(cdxComponentType)
-                .map(Enum::name)
-                .map(Classifier::valueOf);
+        return Optional.ofNullable(cdxComponentType).map(Enum::name).map(Classifier::valueOf);
     }
 
-    private static List<ExternalReference> convertExternalReferences(final List<org.cyclonedx.model.ExternalReference> cdxExternalReferences) {
+    private static List<ExternalReference> convertExternalReferences(
+            final List<org.cyclonedx.model.ExternalReference> cdxExternalReferences) {
         if (cdxExternalReferences == null || cdxExternalReferences.isEmpty()) {
             return null;
         }
@@ -546,7 +608,8 @@ public class ModelConverter {
                 .toList();
     }
 
-    private static OrganizationalEntity convertOrganizationalEntity(final org.cyclonedx.model.OrganizationalEntity cdxEntity) {
+    private static OrganizationalEntity convertOrganizationalEntity(
+            final org.cyclonedx.model.OrganizationalEntity cdxEntity) {
         if (cdxEntity == null) {
             return null;
         }
@@ -573,7 +636,8 @@ public class ModelConverter {
         return entity;
     }
 
-    private static List<DataClassification> convertDataClassification(final List<org.cyclonedx.model.ServiceData> cdxData) {
+    private static List<DataClassification> convertDataClassification(
+            final List<org.cyclonedx.model.ServiceData> cdxData) {
         if (cdxData == null || cdxData.isEmpty()) {
             return Collections.emptyList();
         }
@@ -582,7 +646,8 @@ public class ModelConverter {
                 .map(cdxDatum -> {
                     final var classification = new DataClassification();
                     classification.setName(cdxDatum.getClassification());
-                    classification.setDirection(DataClassification.Direction.valueOf(cdxDatum.getFlow().name()));
+                    classification.setDirection(DataClassification.Direction.valueOf(
+                            cdxDatum.getFlow().name()));
                     return classification;
                 })
                 .toList();
@@ -612,9 +677,10 @@ public class ModelConverter {
                 .orElseGet(() -> UUID.randomUUID().toString());
     }
 
-    public static <T> List<T> flatten(final Collection<T> items,
-                                      final Function<T, Collection<T>> childrenGetter,
-                                      final BiConsumer<T, Collection<T>> childrenSetter) {
+    public static <T> List<T> flatten(
+            final Collection<T> items,
+            final Function<T, Collection<T>> childrenGetter,
+            final BiConsumer<T, Collection<T>> childrenSetter) {
         final var result = new ArrayList<T>();
         if (items == null || items.isEmpty()) {
             return Collections.emptyList();
@@ -633,23 +699,19 @@ public class ModelConverter {
         return result;
     }
 
-    public static org.cyclonedx.model.Component convert(final Component component) {
-        final org.cyclonedx.model.Component cycloneComponent = new org.cyclonedx.model.Component();
+    public static org.cyclonedx.model.Component convertIdentity(Component component) {
+        final var cycloneComponent = new org.cyclonedx.model.Component();
         cycloneComponent.setBomRef(component.getUuid().toString());
         cycloneComponent.setGroup(StringUtils.trimToNull(component.getGroup()));
         cycloneComponent.setName(StringUtils.trimToNull(component.getName()));
         cycloneComponent.setVersion(StringUtils.trimToNull(component.getVersion()));
-        cycloneComponent.setDescription(StringUtils.trimToNull(component.getDescription()));
-        cycloneComponent.setCopyright(StringUtils.trimToNull(component.getCopyright()));
         cycloneComponent.setCpe(StringUtils.trimToNull(component.getCpe()));
-        cycloneComponent.setScope(mapCdxScope(component.getScope()));
-        cycloneComponent.setAuthor(StringUtils.trimToNull(convertContactsToString(component.getAuthors())));
-        cycloneComponent.setSupplier(convert(component.getSupplier()));
-        cycloneComponent.setProperties(convert(component.getProperties()));
 
         if (component.getSwidTagId() != null) {
             final Swid swid = new Swid();
             swid.setTagId(component.getSwidTagId());
+            swid.setName(StringUtils.trimToNull(component.getName()));
+            swid.setVersion(StringUtils.trimToNull(component.getVersion()));
             cycloneComponent.setSwid(swid);
         }
 
@@ -658,29 +720,30 @@ public class ModelConverter {
         }
 
         if (component.getClassifier() != null) {
-            cycloneComponent.setType(org.cyclonedx.model.Component.Type.valueOf(component.getClassifier().name()));
+            cycloneComponent.setType(org.cyclonedx.model.Component.Type.valueOf(
+                    component.getClassifier().name()));
         } else {
             cycloneComponent.setType(org.cyclonedx.model.Component.Type.LIBRARY);
         }
 
-        if (component.getMd5() != null) {
-            cycloneComponent.addHash(new Hash(Hash.Algorithm.MD5, component.getMd5()));
-        }
-        if (component.getSha1() != null) {
-            cycloneComponent.addHash(new Hash(Hash.Algorithm.SHA1, component.getSha1()));
-        }
-        if (component.getSha256() != null) {
-            cycloneComponent.addHash(new Hash(Hash.Algorithm.SHA_256, component.getSha256()));
-        }
-        if (component.getSha512() != null) {
-            cycloneComponent.addHash(new Hash(Hash.Algorithm.SHA_512, component.getSha512()));
-        }
-        if (component.getSha3_256() != null) {
-            cycloneComponent.addHash(new Hash(Hash.Algorithm.SHA3_256, component.getSha3_256()));
-        }
-        if (component.getSha3_512() != null) {
-            cycloneComponent.addHash(new Hash(Hash.Algorithm.SHA3_512, component.getSha3_512()));
-        }
+        COMPONENT_HASH_FIELD_ACCESSORS_BY_ALGORITHM.forEach((algorithm, accessors) -> {
+            final String hashValue = accessors.getter().apply(component);
+            if (hashValue != null && !hashValue.isBlank()) {
+                cycloneComponent.addHash(new Hash(algorithm, hashValue));
+            }
+        });
+
+        return cycloneComponent;
+    }
+
+    public static org.cyclonedx.model.Component convert(Component component) {
+        final org.cyclonedx.model.Component cycloneComponent = convertIdentity(component);
+        cycloneComponent.setDescription(StringUtils.trimToNull(component.getDescription()));
+        cycloneComponent.setCopyright(StringUtils.trimToNull(component.getCopyright()));
+        cycloneComponent.setScope(mapCdxScope(component.getScope()));
+        cycloneComponent.setAuthor(StringUtils.trimToNull(convertContactsToString(component.getAuthors())));
+        cycloneComponent.setSupplier(convert(component.getSupplier()));
+        cycloneComponent.setProperties(convert(component.getProperties()));
 
         final LicenseChoice licenses = new LicenseChoice();
         if (component.getResolvedLicense() != null) {
@@ -712,7 +775,8 @@ public class ModelConverter {
             cycloneComponent.setLicenses(licenses);
         }
 
-        if (component.getExternalReferences() != null && !component.getExternalReferences().isEmpty()) {
+        if (component.getExternalReferences() != null
+                && !component.getExternalReferences().isEmpty()) {
             List<org.cyclonedx.model.ExternalReference> references = new ArrayList<>();
             for (ExternalReference ref : component.getExternalReferences()) {
                 org.cyclonedx.model.ExternalReference cdxRef = new org.cyclonedx.model.ExternalReference();
@@ -772,14 +836,15 @@ public class ModelConverter {
                 stringBuilder.append(author.getName()).append(", ");
             }
         }
-        //remove trailing comma and space
+        // remove trailing comma and space
         if (stringBuilder.length() > 0) {
             stringBuilder.setLength(stringBuilder.length() - 2);
         }
         return stringBuilder.toString();
     }
 
-    private static <T extends IConfigProperty> List<org.cyclonedx.model.Property> convert(final Collection<T> dtProperties) {
+    private static <T extends IConfigProperty> List<org.cyclonedx.model.Property> convert(
+            final Collection<T> dtProperties) {
         if (dtProperties == null || dtProperties.isEmpty()) {
             return Collections.emptyList();
         }
@@ -799,14 +864,9 @@ public class ModelConverter {
         return cdxProperties;
     }
 
-    public static org.cyclonedx.model.Metadata createMetadata(final Project project) {
+    public static org.cyclonedx.model.Metadata createMetadata(final Project project, final Version version) {
         final org.cyclonedx.model.Metadata metadata = new org.cyclonedx.model.Metadata();
-        final org.cyclonedx.model.Tool tool = new org.cyclonedx.model.Tool();
-        tool.setVendor("OWASP");
-        final Config config = ConfigProvider.getConfig();
-        tool.setName(config.getValue(AlpineConfigKeys.BUILD_INFO_APPLICATION_NAME, String.class));
-        tool.setVersion(config.getValue(AlpineConfigKeys.BUILD_INFO_APPLICATION_VERSION, String.class));
-        metadata.setTools(Collections.singletonList(tool));
+        setMetadataTools(metadata, version);
         if (project != null) {
             metadata.setManufacture(convert(project.getManufacturer()));
             final org.cyclonedx.model.Component cycloneComponent = new org.cyclonedx.model.Component();
@@ -823,7 +883,8 @@ public class ModelConverter {
             cycloneComponent.setDescription(StringUtils.trimToNull(project.getDescription()));
             cycloneComponent.setCpe(StringUtils.trimToNull(project.getCpe()));
             if (project.getPurl() != null) {
-                cycloneComponent.setPurl(StringUtils.trimToNull(project.getPurl().canonicalize()));
+                cycloneComponent.setPurl(
+                        StringUtils.trimToNull(project.getPurl().canonicalize()));
             }
             if (StringUtils.trimToNull(project.getSwidTagId()) != null) {
                 final Swid swid = new Swid();
@@ -833,11 +894,13 @@ public class ModelConverter {
                 cycloneComponent.setSwid(swid);
             }
             if (project.getClassifier() != null) {
-                cycloneComponent.setType(org.cyclonedx.model.Component.Type.valueOf(project.getClassifier().name()));
+                cycloneComponent.setType(org.cyclonedx.model.Component.Type.valueOf(
+                        project.getClassifier().name()));
             } else {
                 cycloneComponent.setType(org.cyclonedx.model.Component.Type.LIBRARY);
             }
-            if (project.getExternalReferences() != null && !project.getExternalReferences().isEmpty()) {
+            if (project.getExternalReferences() != null
+                    && !project.getExternalReferences().isEmpty()) {
                 List<org.cyclonedx.model.ExternalReference> references = new ArrayList<>();
                 project.getExternalReferences().forEach(externalReference -> {
                     org.cyclonedx.model.ExternalReference ref = new org.cyclonedx.model.ExternalReference();
@@ -864,6 +927,42 @@ public class ModelConverter {
         return metadata;
     }
 
+    private static void setMetadataTools(final org.cyclonedx.model.Metadata metadata, final Version version) {
+        final Config config = ConfigProvider.getConfig();
+        final String applicationName = config.getValue(AlpineConfigKeys.BUILD_INFO_APPLICATION_NAME, String.class);
+        final String applicationVersion =
+                config.getValue(AlpineConfigKeys.BUILD_INFO_APPLICATION_VERSION, String.class);
+
+        if (version.compareTo(Version.VERSION_15) >= 0) {
+            final var supplier = new org.cyclonedx.model.OrganizationalEntity();
+            supplier.setName("OWASP");
+
+            final var toolComponent = new org.cyclonedx.model.Component();
+            toolComponent.setType(org.cyclonedx.model.Component.Type.APPLICATION);
+            toolComponent.setSupplier(supplier);
+            toolComponent.setName(applicationName);
+            toolComponent.setVersion(applicationVersion);
+
+            final var toolInformation = new org.cyclonedx.model.metadata.ToolInformation();
+            toolInformation.setComponents(List.of(toolComponent));
+            metadata.setToolChoice(toolInformation);
+        } else {
+            setLegacyMetadataTool(metadata, applicationName, applicationVersion);
+        }
+    }
+
+    @SuppressWarnings("deprecation")
+    private static void setLegacyMetadataTool(
+            final org.cyclonedx.model.Metadata metadata,
+            final String applicationName,
+            final String applicationVersion) {
+        final var tool = new org.cyclonedx.model.Tool();
+        tool.setVendor("OWASP");
+        tool.setName(applicationName);
+        tool.setVersion(applicationVersion);
+        metadata.setTools(List.of(tool));
+    }
+
     public static org.cyclonedx.model.Service convert(final QueryManager qm, final ServiceComponent service) {
         final org.cyclonedx.model.Service cycloneService = new org.cyclonedx.model.Service();
         cycloneService.setBomRef(service.getUuid().toString());
@@ -880,11 +979,13 @@ public class ModelConverter {
         cycloneService.setxTrustBoundary(service.getCrossesTrustBoundary());
         if (service.getData() != null && !service.getData().isEmpty()) {
             for (DataClassification dc : service.getData()) {
-                org.cyclonedx.model.ServiceData sd = new org.cyclonedx.model.ServiceData(dc.getDirection().name(), dc.getName());
+                org.cyclonedx.model.ServiceData sd =
+                        new org.cyclonedx.model.ServiceData(dc.getDirection().name(), dc.getName());
                 cycloneService.addServiceData(sd);
             }
         }
-        if (service.getExternalReferences() != null && !service.getExternalReferences().isEmpty()) {
+        if (service.getExternalReferences() != null
+                && !service.getExternalReferences().isEmpty()) {
             for (ExternalReference ref : service.getExternalReferences()) {
                 org.cyclonedx.model.ExternalReference cycloneRef = new org.cyclonedx.model.ExternalReference();
                 cycloneRef.setType(ref.getType());
@@ -927,23 +1028,20 @@ public class ModelConverter {
         return cycloneService;
     }
 
-    public static org.cyclonedx.model.vulnerability.Vulnerability convert(final QueryManager qm, final CycloneDXExporter.Variant variant,
-                                                                          final Finding finding) {
-        final Component component = qm.getObjectByUuid(Component.class, finding.getComponent().get("uuid").toString());
-        final Project project = component.getProject();
-        final Vulnerability vulnerability = qm.getObjectByUuid(Vulnerability.class, finding.getVulnerability().get("uuid").toString());
-
-        final org.cyclonedx.model.vulnerability.Vulnerability cdxVulnerability = new org.cyclonedx.model.vulnerability.Vulnerability();
-        cdxVulnerability.setBomRef(vulnerability.getUuid().toString());
+    private static org.cyclonedx.model.vulnerability.Vulnerability convert(
+            Vulnerability vulnerability, Analysis analysis, SortedSet<String> affectedComponentUuids) {
+        // NB: No bom-ref. It is optional, nothing references a vulnerability entry,
+        // and one vulnerability may yield several entries, which historically made the vulnerability
+        // UUID a source of duplicate bom-refs. CycloneDX requires every bom-ref to be unique within the BOM.
+        final var cdxVulnerability = new org.cyclonedx.model.vulnerability.Vulnerability();
         cdxVulnerability.setId(vulnerability.getVulnId());
-        // Add the vulnerability source
-        org.cyclonedx.model.vulnerability.Vulnerability.Source cdxSource = new org.cyclonedx.model.vulnerability.Vulnerability.Source();
-        cdxSource.setName(vulnerability.getSource());
-        cdxVulnerability.setSource(convertDtVulnSourceToCdxVulnSource(Vulnerability.Source.valueOf(vulnerability.getSource())));
+        cdxVulnerability.setSource(
+                convertDtVulnSourceToCdxVulnSource(Vulnerability.Source.valueOf(vulnerability.getSource())));
 
         if (vulnerability.getCvssV2BaseScore() != null) {
-            org.cyclonedx.model.vulnerability.Vulnerability.Rating rating = new org.cyclonedx.model.vulnerability.Vulnerability.Rating();
-            rating.setSource(convertDtVulnSourceToCdxVulnSource(Vulnerability.Source.valueOf(vulnerability.getSource())));
+            final var rating = new org.cyclonedx.model.vulnerability.Vulnerability.Rating();
+            rating.setSource(
+                    convertDtVulnSourceToCdxVulnSource(Vulnerability.Source.valueOf(vulnerability.getSource())));
             rating.setMethod(org.cyclonedx.model.vulnerability.Vulnerability.Rating.Method.CVSSV2);
             rating.setScore(vulnerability.getCvssV2BaseScore().doubleValue());
             rating.setVector(vulnerability.getCvssV2Vector());
@@ -957,9 +1055,11 @@ public class ModelConverter {
             cdxVulnerability.addRating(rating);
         }
         if (vulnerability.getCvssV3BaseScore() != null) {
-            org.cyclonedx.model.vulnerability.Vulnerability.Rating rating = new org.cyclonedx.model.vulnerability.Vulnerability.Rating();
-            rating.setSource(convertDtVulnSourceToCdxVulnSource(Vulnerability.Source.valueOf(vulnerability.getSource())));
-            if (vulnerability.getCvssV3Vector() != null && vulnerability.getCvssV3Vector().contains("CVSS:3.0")) {
+            final var rating = new org.cyclonedx.model.vulnerability.Vulnerability.Rating();
+            rating.setSource(
+                    convertDtVulnSourceToCdxVulnSource(Vulnerability.Source.valueOf(vulnerability.getSource())));
+            if (vulnerability.getCvssV3Vector() != null
+                    && vulnerability.getCvssV3Vector().contains("CVSS:3.0")) {
                 rating.setMethod(org.cyclonedx.model.vulnerability.Vulnerability.Rating.Method.CVSSV3);
             } else {
                 rating.setMethod(org.cyclonedx.model.vulnerability.Vulnerability.Rating.Method.CVSSV31);
@@ -978,8 +1078,9 @@ public class ModelConverter {
             cdxVulnerability.addRating(rating);
         }
         if (vulnerability.getCvssV4Score() != null) {
-            org.cyclonedx.model.vulnerability.Vulnerability.Rating rating = new org.cyclonedx.model.vulnerability.Vulnerability.Rating();
-            rating.setSource(convertDtVulnSourceToCdxVulnSource(Vulnerability.Source.valueOf(vulnerability.getSource())));
+            final var rating = new org.cyclonedx.model.vulnerability.Vulnerability.Rating();
+            rating.setSource(
+                    convertDtVulnSourceToCdxVulnSource(Vulnerability.Source.valueOf(vulnerability.getSource())));
             rating.setScore(vulnerability.getCvssV4Score().doubleValue());
             rating.setVector(vulnerability.getCvssV4Vector());
             if (rating.getScore() >= 9.0) {
@@ -993,18 +1094,28 @@ public class ModelConverter {
             }
             cdxVulnerability.addRating(rating);
         }
-        if (vulnerability.getOwaspRRLikelihoodScore() != null && vulnerability.getOwaspRRTechnicalImpactScore() != null && vulnerability.getOwaspRRBusinessImpactScore() != null) {
-            org.cyclonedx.model.vulnerability.Vulnerability.Rating rating = new org.cyclonedx.model.vulnerability.Vulnerability.Rating();
-            rating.setSeverity(convertDtSeverityToCdxSeverity(VulnerabilityUtil.normalizedOwaspRRScore(vulnerability.getOwaspRRLikelihoodScore().doubleValue(), vulnerability.getOwaspRRTechnicalImpactScore().doubleValue(), vulnerability.getOwaspRRBusinessImpactScore().doubleValue())));
-            rating.setSource(convertDtVulnSourceToCdxVulnSource(Vulnerability.Source.valueOf(vulnerability.getSource())));
+        if (vulnerability.getOwaspRRLikelihoodScore() != null
+                && vulnerability.getOwaspRRTechnicalImpactScore() != null
+                && vulnerability.getOwaspRRBusinessImpactScore() != null) {
+            final var rating = new org.cyclonedx.model.vulnerability.Vulnerability.Rating();
+            rating.setSeverity(convertDtSeverityToCdxSeverity(VulnerabilityUtil.normalizedOwaspRRScore(
+                    vulnerability.getOwaspRRLikelihoodScore().doubleValue(),
+                    vulnerability.getOwaspRRTechnicalImpactScore().doubleValue(),
+                    vulnerability.getOwaspRRBusinessImpactScore().doubleValue())));
+            rating.setSource(
+                    convertDtVulnSourceToCdxVulnSource(Vulnerability.Source.valueOf(vulnerability.getSource())));
             rating.setMethod(org.cyclonedx.model.vulnerability.Vulnerability.Rating.Method.OWASP);
             rating.setVector(vulnerability.getOwaspRRVector());
             cdxVulnerability.addRating(rating);
         }
-        if (vulnerability.getCvssV2BaseScore() == null && vulnerability.getCvssV3BaseScore() == null && vulnerability.getCvssV4Score() == null && vulnerability.getOwaspRRLikelihoodScore() == null) {
-            org.cyclonedx.model.vulnerability.Vulnerability.Rating rating = new org.cyclonedx.model.vulnerability.Vulnerability.Rating();
+        if (vulnerability.getCvssV2BaseScore() == null
+                && vulnerability.getCvssV3BaseScore() == null
+                && vulnerability.getCvssV4Score() == null
+                && vulnerability.getOwaspRRLikelihoodScore() == null) {
+            final var rating = new org.cyclonedx.model.vulnerability.Vulnerability.Rating();
             rating.setSeverity(convertDtSeverityToCdxSeverity(vulnerability.getSeverity()));
-            rating.setSource(convertDtVulnSourceToCdxVulnSource(Vulnerability.Source.valueOf(vulnerability.getSource())));
+            rating.setSource(
+                    convertDtVulnSourceToCdxVulnSource(Vulnerability.Source.valueOf(vulnerability.getSource())));
             rating.setMethod(org.cyclonedx.model.vulnerability.Vulnerability.Rating.Method.OTHER);
             cdxVulnerability.addRating(rating);
         }
@@ -1022,44 +1133,35 @@ public class ModelConverter {
         cdxVulnerability.setPublished(vulnerability.getPublished());
         cdxVulnerability.setUpdated(vulnerability.getUpdated());
 
-        if (CycloneDXExporter.Variant.INVENTORY_WITH_VULNERABILITIES == variant || CycloneDXExporter.Variant.VDR == variant) {
-            final List<org.cyclonedx.model.vulnerability.Vulnerability.Affect> affects = new ArrayList<>();
-            final org.cyclonedx.model.vulnerability.Vulnerability.Affect affect = new org.cyclonedx.model.vulnerability.Vulnerability.Affect();
-            affect.setRef(component.getUuid().toString());
+        // The affected components are VEX "subcomponents", i.e. the elements of the product
+        // in which the vulnerability originates. The product itself is identified by metadata.component.
+        final var affects =
+                new ArrayList<org.cyclonedx.model.vulnerability.Vulnerability.Affect>(affectedComponentUuids.size());
+        for (final String componentUuid : affectedComponentUuids) {
+            final var affect = new org.cyclonedx.model.vulnerability.Vulnerability.Affect();
+            affect.setRef(componentUuid);
             affects.add(affect);
-            cdxVulnerability.setAffects(affects);
-        } else if (CycloneDXExporter.Variant.VEX == variant && project != null) {
-            final List<org.cyclonedx.model.vulnerability.Vulnerability.Affect> affects = new ArrayList<>();
-            final org.cyclonedx.model.vulnerability.Vulnerability.Affect affect = new org.cyclonedx.model.vulnerability.Vulnerability.Affect();
-            affect.setRef(project.getUuid().toString());
-            affects.add(affect);
-            cdxVulnerability.setAffects(affects);
         }
+        cdxVulnerability.setAffects(affects);
 
-        if (CycloneDXExporter.Variant.VEX == variant || CycloneDXExporter.Variant.VDR == variant) {
-            final Analysis analysis = qm.getAnalysis(
-                    qm.getObjectByUuid(Component.class, component.getUuid()),
-                    qm.getObjectByUuid(Vulnerability.class, vulnerability.getUuid())
-            );
-            if (analysis != null) {
-                final org.cyclonedx.model.vulnerability.Vulnerability.Analysis cdxAnalysis = new org.cyclonedx.model.vulnerability.Vulnerability.Analysis();
-                if (analysis.getAnalysisResponse() != null) {
-                    final org.cyclonedx.model.vulnerability.Vulnerability.Analysis.Response response = convertDtVulnAnalysisResponseToCdxAnalysisResponse(analysis.getAnalysisResponse());
-                    if (response != null) {
-                        List<org.cyclonedx.model.vulnerability.Vulnerability.Analysis.Response> responses = new ArrayList<>();
-                        responses.add(response);
-                        cdxAnalysis.setResponses(responses);
-                    }
+        if (analysis != null) {
+            final var cdxAnalysis = new org.cyclonedx.model.vulnerability.Vulnerability.Analysis();
+            if (analysis.getAnalysisResponse() != null) {
+                final org.cyclonedx.model.vulnerability.Vulnerability.Analysis.Response response =
+                        convertDtVulnAnalysisResponseToCdxAnalysisResponse(analysis.getAnalysisResponse());
+                if (response != null) {
+                    cdxAnalysis.setResponses(new ArrayList<>(List.of(response)));
                 }
-                if (analysis.getAnalysisState() != null) {
-                    cdxAnalysis.setState(convertDtVulnAnalysisStateToCdxAnalysisState(analysis.getAnalysisState()));
-                }
-                if (analysis.getAnalysisJustification() != null) {
-                    cdxAnalysis.setJustification(convertDtVulnAnalysisJustificationToCdxAnalysisJustification(analysis.getAnalysisJustification()));
-                }
-                cdxAnalysis.setDetail(StringUtils.trimToNull(analysis.getAnalysisDetails()));
-                cdxVulnerability.setAnalysis(cdxAnalysis);
             }
+            if (analysis.getAnalysisState() != null) {
+                cdxAnalysis.setState(convertDtVulnAnalysisStateToCdxAnalysisState(analysis.getAnalysisState()));
+            }
+            if (analysis.getAnalysisJustification() != null) {
+                cdxAnalysis.setJustification(convertDtVulnAnalysisJustificationToCdxAnalysisJustification(
+                        analysis.getAnalysisJustification()));
+            }
+            cdxAnalysis.setDetail(StringUtils.trimToNull(analysis.getAnalysisDetails()));
+            cdxVulnerability.setAnalysis(cdxAnalysis);
         }
 
         return cdxVulnerability;
@@ -1092,20 +1194,24 @@ public class ModelConverter {
         return dependencies;
     }
 
-    private static List<Dependency> convertDirectDependencies(final String directDependenciesRaw, final List<Component> components) {
+    private static List<Dependency> convertDirectDependencies(
+            final String directDependenciesRaw, final List<Component> components) {
         if (directDependenciesRaw == null || directDependenciesRaw.isBlank()) {
             return Collections.emptyList();
         }
 
         final var dependencies = new ArrayList<Dependency>();
-        final JsonValue directDependenciesJson = Json
-                .createReader(new StringReader(directDependenciesRaw))
-                .readValue();
+        final JsonValue directDependenciesJson =
+                Json.createReader(new StringReader(directDependenciesRaw)).readValue();
         if (directDependenciesJson instanceof final JsonArray directDependenciesJsonArray) {
             for (final JsonValue directDependency : directDependenciesJsonArray) {
                 if (directDependency instanceof final JsonObject directDependencyObject) {
                     final String componentUuid = directDependencyObject.getString("uuid", null);
-                    if (componentUuid != null && components.stream().map(Component::getUuid).map(UUID::toString).anyMatch(componentUuid::equals)) {
+                    if (componentUuid != null
+                            && components.stream()
+                                    .map(Component::getUuid)
+                                    .map(UUID::toString)
+                                    .anyMatch(componentUuid::equals)) {
                         dependencies.add(new Dependency(directDependencyObject.getString("uuid")));
                     }
                 }
@@ -1115,7 +1221,8 @@ public class ModelConverter {
         return dependencies;
     }
 
-    private static org.cyclonedx.model.vulnerability.Vulnerability.Rating.Severity convertDtSeverityToCdxSeverity(final Severity severity) {
+    private static org.cyclonedx.model.vulnerability.Vulnerability.Rating.Severity convertDtSeverityToCdxSeverity(
+            final Severity severity) {
         switch (severity) {
             case CRITICAL:
                 return org.cyclonedx.model.vulnerability.Vulnerability.Rating.Severity.CRITICAL;
@@ -1130,8 +1237,10 @@ public class ModelConverter {
         }
     }
 
-    private static org.cyclonedx.model.vulnerability.Vulnerability.Source convertDtVulnSourceToCdxVulnSource(final Vulnerability.Source vulnSource) {
-        org.cyclonedx.model.vulnerability.Vulnerability.Source cdxSource = new org.cyclonedx.model.vulnerability.Vulnerability.Source();
+    private static org.cyclonedx.model.vulnerability.Vulnerability.Source convertDtVulnSourceToCdxVulnSource(
+            final Vulnerability.Source vulnSource) {
+        org.cyclonedx.model.vulnerability.Vulnerability.Source cdxSource =
+                new org.cyclonedx.model.vulnerability.Vulnerability.Source();
         cdxSource.setName(vulnSource.name());
         switch (vulnSource) {
             case GITHUB -> cdxSource.setUrl("https://github.com/advisories");
@@ -1144,7 +1253,8 @@ public class ModelConverter {
         return cdxSource;
     }
 
-    private static org.cyclonedx.model.vulnerability.Vulnerability.Analysis.Response convertDtVulnAnalysisResponseToCdxAnalysisResponse(final AnalysisResponse analysisResponse) {
+    private static org.cyclonedx.model.vulnerability.Vulnerability.Analysis.Response
+            convertDtVulnAnalysisResponseToCdxAnalysisResponse(final AnalysisResponse analysisResponse) {
         if (analysisResponse == null) {
             return null;
         }
@@ -1164,7 +1274,8 @@ public class ModelConverter {
         }
     }
 
-    public static AnalysisResponse convertCdxVulnAnalysisResponseToDtAnalysisResponse(final org.cyclonedx.model.vulnerability.Vulnerability.Analysis.Response cdxAnalysisResponse) {
+    public static AnalysisResponse convertCdxVulnAnalysisResponseToDtAnalysisResponse(
+            final org.cyclonedx.model.vulnerability.Vulnerability.Analysis.Response cdxAnalysisResponse) {
         if (cdxAnalysisResponse == null) {
             return null;
         }
@@ -1184,7 +1295,8 @@ public class ModelConverter {
         }
     }
 
-    private static org.cyclonedx.model.vulnerability.Vulnerability.Analysis.State convertDtVulnAnalysisStateToCdxAnalysisState(final AnalysisState analysisState) {
+    private static org.cyclonedx.model.vulnerability.Vulnerability.Analysis.State
+            convertDtVulnAnalysisStateToCdxAnalysisState(final AnalysisState analysisState) {
         if (analysisState == null) {
             return null;
         }
@@ -1204,7 +1316,8 @@ public class ModelConverter {
         }
     }
 
-    public static AnalysisState convertCdxVulnAnalysisStateToDtAnalysisState(final org.cyclonedx.model.vulnerability.Vulnerability.Analysis.State cdxAnalysisState) {
+    public static AnalysisState convertCdxVulnAnalysisStateToDtAnalysisState(
+            final org.cyclonedx.model.vulnerability.Vulnerability.Analysis.State cdxAnalysisState) {
         if (cdxAnalysisState == null) {
             return null;
         }
@@ -1224,7 +1337,9 @@ public class ModelConverter {
         }
     }
 
-    private static org.cyclonedx.model.vulnerability.Vulnerability.Analysis.Justification convertDtVulnAnalysisJustificationToCdxAnalysisJustification(final AnalysisJustification analysisJustification) {
+    private static org.cyclonedx.model.vulnerability.Vulnerability.Analysis.Justification
+            convertDtVulnAnalysisJustificationToCdxAnalysisJustification(
+                    final AnalysisJustification analysisJustification) {
         if (analysisJustification == null) {
             return null;
         }
@@ -1240,7 +1355,8 @@ public class ModelConverter {
             case PROTECTED_BY_COMPILER:
                 return org.cyclonedx.model.vulnerability.Vulnerability.Analysis.Justification.PROTECTED_BY_COMPILER;
             case PROTECTED_BY_MITIGATING_CONTROL:
-                return org.cyclonedx.model.vulnerability.Vulnerability.Analysis.Justification.PROTECTED_BY_MITIGATING_CONTROL;
+                return org.cyclonedx.model.vulnerability.Vulnerability.Analysis.Justification
+                        .PROTECTED_BY_MITIGATING_CONTROL;
             case REQUIRES_CONFIGURATION:
                 return org.cyclonedx.model.vulnerability.Vulnerability.Analysis.Justification.REQUIRES_CONFIGURATION;
             case REQUIRES_DEPENDENCY:
@@ -1252,7 +1368,8 @@ public class ModelConverter {
         }
     }
 
-    public static AnalysisJustification convertCdxVulnAnalysisJustificationToDtAnalysisJustification(final org.cyclonedx.model.vulnerability.Vulnerability.Analysis.Justification cdxAnalysisJustification) {
+    public static AnalysisJustification convertCdxVulnAnalysisJustificationToDtAnalysisJustification(
+            final org.cyclonedx.model.vulnerability.Vulnerability.Analysis.Justification cdxAnalysisJustification) {
         if (cdxAnalysisJustification == null) {
             return null;
         }
@@ -1281,25 +1398,81 @@ public class ModelConverter {
     }
 
     public static List<org.cyclonedx.model.vulnerability.Vulnerability> generateVulnerabilities(
-            final QueryManager qm,
-            final CycloneDXExporter.Variant variant,
-            final List<Finding> findings
-    ) {
+            QueryManager qm, CycloneDXExporter.Variant variant, List<Finding> findings) {
         if (findings == null) {
-            return Collections.emptyList();
+            return List.of();
         }
-        final var vulnerabilitiesSeen = new HashSet<org.cyclonedx.model.vulnerability.Vulnerability>();
-        return findings.stream()
-                .map(finding -> convert(qm, variant, finding))
-                .filter(vulnerabilitiesSeen::add)
+
+        // CISA's VEX minimum requirements allow one statement to cover multiple affected elements,
+        // but only while the status holds for all of them:
+        //
+        //   "If status or other VEX information changes for a subset of products,
+        //   additional VEX statements MUST be created for the respective subset."
+        //
+        // Hence, we group by vulnerability and analysis.
+        final var groups = new LinkedHashMap<VulnerabilityGroupKey, VulnerabilityGroup>();
+        for (final Finding finding : findings) {
+            final Component component = qm.getObjectByUuid(
+                    Component.class, finding.getComponent().get("uuid").toString());
+            if (component == null) {
+                continue;
+            }
+
+            final Vulnerability vulnerability = qm.getObjectByUuid(
+                    Vulnerability.class, finding.getVulnerability().get("uuid").toString());
+            if (vulnerability == null) {
+                continue;
+            }
+
+            final Analysis analysis = variant.hasCapability(CycloneDXExporter.Capability.EMITS_ANALYSIS)
+                    ? qm.getAnalysis(component, vulnerability)
+                    : null;
+
+            groups.computeIfAbsent(
+                            VulnerabilityGroupKey.of(vulnerability, analysis),
+                            ignored -> new VulnerabilityGroup(vulnerability, analysis, new TreeSet<>()))
+                    .affectedComponentUuids()
+                    .add(component.getUuid().toString());
+        }
+
+        return groups.values().stream()
+                .map(group -> convert(group.vulnerability(), group.analysis(), group.affectedComponentUuids()))
                 .toList();
     }
 
+    private record VulnerabilityGroup(
+            Vulnerability vulnerability, Analysis analysis, SortedSet<String> affectedComponentUuids) {}
+
+    private record VulnerabilityGroupKey(
+            UUID vulnerabilityUuid,
+            boolean analyzed,
+            AnalysisState analysisState,
+            AnalysisJustification analysisJustification,
+            AnalysisResponse analysisResponse,
+            String analysisDetails) {
+
+        private static VulnerabilityGroupKey of(Vulnerability vulnerability, Analysis analysis) {
+            if (analysis == null) {
+                return new VulnerabilityGroupKey(vulnerability.getUuid(), false, null, null, null, null);
+            }
+
+            return new VulnerabilityGroupKey(
+                    vulnerability.getUuid(),
+                    true,
+                    analysis.getAnalysisState(),
+                    analysis.getAnalysisJustification(),
+                    analysis.getAnalysisResponse(),
+                    StringUtils.trimToNull(analysis.getAnalysisDetails()));
+        }
+    }
+
     public static org.cyclonedx.model.Component.Scope mapCdxScope(Scope scope) {
-        return scope == null ? null : switch (scope) {
-            case REQUIRED -> org.cyclonedx.model.Component.Scope.REQUIRED;
-            case EXCLUDED -> org.cyclonedx.model.Component.Scope.EXCLUDED;
-            case OPTIONAL -> org.cyclonedx.model.Component.Scope.OPTIONAL;
-        };
+        return scope == null
+                ? null
+                : switch (scope) {
+                    case REQUIRED -> org.cyclonedx.model.Component.Scope.REQUIRED;
+                    case EXCLUDED -> org.cyclonedx.model.Component.Scope.EXCLUDED;
+                    case OPTIONAL -> org.cyclonedx.model.Component.Scope.OPTIONAL;
+                };
     }
 }
